# sample-agentcore-cloudfront-x402-payments

./: .gitignore  QUICKSTART.md  README.md
docs/: AGENTCORE.md  API.md  TROUBLESHOOTING.md
payer-agent/: .env.example  Dockerfile  README.md  pyproject.toml
payer-agent/agent/: config.py  main.py
payer-agent/agent/tools/: __init__.py  content.py  discovery.py  payment.py
payer-agent/scripts/: chat.py  deploy_to_agentcore.py
payer-agent/tests/: conftest.py  test_402_response.py  test_config.py  test_mcp_client.py  test_payment.py  test_payment_analysis.py  test_payment_signing.py  test_retry_with_payment.py
payer-infrastructure/: README.md
payer-infrastructure/lib/: agentcore-stack.ts  observability-stack.ts
seller-infrastructure/: cdk.json  package-lock.json  package.json
seller-infrastructure/content/api/: catalog  dataset  market-analysis  premium-article  research-report  tutorial  weather-data
seller-infrastructure/lib/: seller-stack.ts
web-ui/: package-lock.json
web-ui/src/components/: ContentRequest.tsx
